--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -446,3 +446,10 @@ h4 {
   width: 100%;
 }
 
+.cove-button:disabled,
+.cove-button[disabled] {
+  cursor: not-allowed;
+  opacity: 0.6;
+  transform: none;
+  box-shadow: none;
+}
