--- a/_includes/approaches.html
+++ b/_includes/approaches.html
@@ -15,7 +15,7 @@
     {% assign approaches_first = approaches.tabs[0].description | strip %}
     <div class="section-intro" data-approaches-lock>
       {% if approaches_label != '' %}
-      <p class="cove-eyebrow">{{ approaches_label }}</p>
+      <h2 class="cove-section-title cove-section-title--eyebrow">{{ approaches_label }}</h2>
       {% endif %}
       {% if approaches_summary != '' and approaches_summary != approaches_first %}
       <div class="cove-section-summary cove-rich-text">{{ approaches.summary | markdownify }}</div>
