--- a/_includes/therapists.html
+++ b/_includes/therapists.html
@@ -12,7 +12,7 @@
   <div class="cove-shell">
     <div class="section-intro section-intro--left">
       {% if therapists_label != '' %}
-      <h2 class="cove-section-title cove-section-title--eyebrow">{{ therapists_label }}</h2>
+      <p class="cove-eyebrow">{{ therapists_label }}</p>
       {% endif %}
     </div>
     {% if featured %}
