fix(ui): remove therapist card surface background

--- a/_includes/therapists.html
+++ b/_includes/therapists.html
@@ -44,7 +44,7 @@
 
     <div class="cove-therapists-grid">
       {% for member in therapists.members offset:1 %}
-      <article class="cove-therapists-card cove-surface transition hover:-translate-y-1">
+      <article class="cove-therapists-card transition hover:-translate-y-1">
         <div class="cove-therapists-card-media ring-1 ring-white/40">
           {% include picture.html
             src=member.image
