--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 <body>
   {{ content }}
   <script defer src="{{ '/assets/vendor/flowbite/flowbite.min.js' | relative_url }}"></script>
+  <script defer src="{{ '/assets/js/anchor-center.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/approaches-tabs.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/contact-form.js' | relative_url }}"></script>
 </body>
