--- a/_includes/therapists.html
+++ b/_includes/therapists.html
@@ -8,7 +8,7 @@
 {% endfor %}
 {% assign featured = therapists.members[0] %}
 <span id="therapists" class="cove-anchor cove-anchor--therapists"></span>
-<section class="cove-section cove-therapists">
+<section class="cove-section cove-therapists" data-anchor-center-target=".cove-therapists-featured">
   <div class="cove-shell">
     <div class="section-intro section-intro--left">
       {% if therapists_label != '' %}
